--- a/index.html
+++ b/index.html
@@ -51,8 +51,12 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm">
                     <img src="img/logo.png" class="img-fluid">
+                    <a href="#reserve" class="btn btn-warning btn-sm" role="button" aria-pressed="true"
+                        style="margin-left: 50px;width:200px;">
+                        Reserve Table
+                    </a>
                 </div>
             </div>
         </div>
@@ -87,8 +91,20 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet
+                            <span class="badge badge-danger">NEW</span>
+                        </h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, 
+                                six enticing appetizers, six main entrees and five choicest desserts. Free 
+                                flowing bubbly and soft drinks. All for just $19.99 per person 
+                                
+                        </p>
+                    </div>
+                    <img class="d-flex ml-3 img-thumbnail align-self-center"
+                            src="img/buffet.png" alt="Buffet">
+                </div>
             </div>
         </div>
 
@@ -108,6 +124,58 @@
                             whos-who in the culinary world, he specializes in
                             creating mouthwatering Indo-Italian fusion experiences.
                             </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row row-content justify-content-md-center"id="reserve">
+            <div class="col-8 col-sm-8 col-xl-8">
+                <div class="card">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                        <div class="card-body">
+                            <form>
+                                <div class="form-group row">
+                                    <label for="guests" class="col-md-2 col-form-label">Number of guests</label>
+                                        <div class="col-md-10">
+                                            <label class="radio-inline">
+                                                <input type="radio" name="optradio" id="guests"> 1
+                                            </label>
+                                            <label class="radio-inline">
+                                                <input type="radio" name="optradio" id="guests"> 2
+                                            </label>
+                                            <label class="radio-inline">
+                                                <input type="radio" name="optradio" id="guests"> 3
+                                            </label>
+                                            <label class="radio-inline">
+                                                <input type="radio" name="optradio" id="guests"> 4
+                                            </label>
+                                            <label class="radio-inline">
+                                                <input type="radio" name="optradio" id="guests"> 5
+                                            </label>
+                                            <label class="radio-inline">
+                                                <input type="radio" name="optradio" id="guests"> 6
+                                            </label>
+                                        </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="telnum" class="col-12 col-md-2 col-form-label">Date and Time</label>
+                                    <div class="col-12 col-md-4">
+                                        <input type="tel" class="form-control" 
+                                            id="areacode" name="areacode" placeholder="Date">
+                                    </div>
+                                    <div class="col-12 col-md-4">
+                                        <input type="tel" class="form-control" 
+                                            id="telnum" name="telnum" placeholder="Time">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="offset-md-2 col-md-10">
+                                        <button type="submit" class="btn btn-primary">Reserve</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
