--- a/index.html
+++ b/index.html
@@ -96,10 +96,19 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <a href="#reserve" class="btn btn-block nav-link btn-warning" 
+                    <!-- With Tool tip
+                        <a href="#reserve" class="btn btn-block nav-link btn-warning" 
                         role="button" data-toggle="tooltip" data-html="true"  
                         title="Or Call us at  <br><strong>+852 12345678</strong>"
                         data-placement="bottom">
+                        Reserve Table
+                        </a>
+                    -->
+                    <!-- Modal -->
+                    
+                    <a data-toggle="modal" data-target="#reserve" 
+                        class="btn btn-block nav-link btn-warning" 
+                        role="button">
                         Reserve Table
                     </a>
                 </div>
@@ -231,7 +240,8 @@
             </div>
         </div>
 
-        <div class="row row-content justify-content-md-center"id="reserve">
+    <!--
+        <div class="row row-content justify-content-md-center" id="reserve">
             <div class="col-8 col-sm-8 col-xl-8">
                 <div class="card">
                     <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
@@ -279,6 +289,75 @@
                             </form>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    -->
+    </div>
+
+    <div id="reserve" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group row">
+                            <label for="guests" class="col-md-2 col-form-label">Number of guests</label>
+                                <div class="col-md-10">
+                                    <label class="radio-inline">
+                                        <input type="radio" name="optradio" id="guests"> 1
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="optradio" id="guests"> 2
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="optradio" id="guests"> 3
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="optradio" id="guests"> 4
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="optradio" id="guests"> 5
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="optradio" id="guests"> 6
+                                    </label>
+                                </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="section" class="col-12 col-md-2 col-form-label">Section</label>
+                            <div class="btn-group btn-group-toggle col-12 col-md-4" data-toggle="buttons">
+                                <label class="btn btn-success active">
+                                  <input type="radio" name="options" id="option1" autocomplete="off" checked>Non-Smoking
+                                </label>
+                                <label class="btn btn-success">
+                                  <input type="radio" name="options" id="option3" autocomplete="off"> Smoking
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="telnum" class="col-12 col-md-2 col-form-label">Date and Time</label>
+                            <div class="col-12 col-md-4">
+                                <input type="tel" class="form-control" 
+                                    id="areacode" name="areacode" placeholder="Date">
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <input type="tel" class="form-control" 
+                                    id="telnum" name="telnum" placeholder="Time">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="buttons" class="col-12 col-md-2 col-form-label"></label>
+                            <div class="col-12 col-md-4">
+                                <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary btn-sm ml-1">Reserve</button>  
+                            </div>      
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -330,12 +409,13 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function(){
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
-        
+    <!-- For tooltip 
+        <script>
+            $(document).ready(function(){
+                $('[data-toggle="tooltip"]').tooltip();
+            });
+        </script>
+    -->  
 
 </body>
 
